# vnpy_duckdb

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pythonapp.yml
tests/: test_duckdb_database.py
vnpy_duckdb/: __init__.py  duckdb_database.py
